frontend/core/src/main/webapp/static/less/layout.less
/* ... */
// For iPhone 4s, we need a much tighter layout
.height-small .group-instruction{
  .textgroup-ingress {
    padding-top: @grid-vertical-small;
  }
  .textgroup-ingress.last {
    padding-top: @grid-vertical-half;
  }
}

/*
Use `.group-instruction-input` to create an instruction block below an input field.
*/
.group-instruction-input {
  padding-top: @grid-vertical-small;
  padding-bottom: @grid-vertical-small;
}

/*
Use `.group-instruction-jumbtron` to create a very large instruction block in the middle of a section.
*/

// 1. Reset margins of header to make it go to the top of the page
// 2. Vertically center a span in the middle of the header
.group-instruction-jumbotron {
  p {
    margin-top: @grid-vertical * 1.5;
    margin-bottom: @grid-vertical * 1.5;
  }
  .group-instruction--header {
    margin-top: 0; // [1]
    margin-bottom: 0; // [1]
    display: table; // [2]
    height: @grid-vertical * 1.5; // [2]
    span {
      display: table-cell; // [2]
      vertical-align: middle; // [2]
    }
  }
  .group-instruction--main {
    span {
      line-height: @grid-vertical * 1.5;
    }
  }
}

// iPhone 4s, less top margin
.height-small .group-instruction-jumbotron {
  .group-instruction--main{
    margin-top: @grid-vertical-medium;
  }
}

/*
Use `.group-mixed` to create horizontal collections of different elements.

Not compatible with `.row` so we need to apply padding-left and -right inside.

NOTE: Implementation depends on the removing of --left|--right DOM nodes if they have no content
*/

@padding-inner-group-mixed: 10px;

.group-mixed {
  display: block;
}

.group-mixed--left, .group-mixed--middle, .group-mixed--right {
  display: table-cell;
  vertical-align: middle;
}

// 1. Force all child elements not to increase .group-mixed height
.group-mixed--left, .group-mixed--right {
  * {
    display: block; /* [1] */
  }
}

// 1. Increase clicking area
.group-mixed--left {
  padding-right: @padding-inner-group-mixed;

  a, input[type="checkbox"] + label, div {
    padding-left: @grid-horizontal; /* [1] */
    height: @grid-vertical;         /* [1] */
  }
  a, input[type="checkbox"] + label:before, span {
    line-height: @grid-vertical;
  }
}

.group-mixed--middle {
  width: 100%;
  line-height: @grid-vertical;
}

.group-mixed.details {
  .group-mixed--middle {
    line-height: @grid-vertical-small;
  }
}

.group-mixed.height-large {
  margin-top: 10px;
}

// 1. Increase clicking area
.group-mixed--right {
  padding-left: @padding-inner-group-mixed;

  // NOTE: all buttons have height defined
  & > button,
  & > a,
  & > span {
    padding-right: @grid-horizontal;  /* [1] */
  }
  & > a {
    height: @grid-vertical;
    line-height: @grid-vertical;
  }
}

// 1. Simple table grid layout.
.table {
  display: table; // [1]
  width: 100%;
}

.table-row {
  display: table-row;
  height: @grid-vertical;
}

// 1. Each cell has half the width.
.table-cell {
  display: table-cell;
  vertical-align: middle;
  width: 50%; // [1]
  text-align: center;
  padding-left: 5px;
  padding-right: 5px;
}

.table.two-to-left .table-cell {
  text-align: left;
}

.table.two-to-left .table-cell:nth-child(odd) {
  padding-left: @grid-horizontal;
}

.table.two-to-left .table-cell:nth-child(even) {
  padding-right: @grid-horizontal;
}

// FIXME: .short-text and .long-text are ugly hacks!
.table.two-to-left .short-text {
  span, a {
    height: @grid-vertical - 12px;
  }
}

.table.two-to-left .long-text {
  span, a {
    height: @grid-vertical + 12px;
  }
}

// 1. Set padding-left to default padding for inactive.
//    NOTE: It would be better to use :empty selector but it did not work with AngularJS 1.3.0 on element with
//          ng-if so use .inactive instead.
.group-mixed--right.inactive {
  padding-left: @grid-horizontal; // [1]
}

// 1. .group-mixed--middle can be used directly in <a> elements for increased clicking area.
.group-mixed--middle:first-child {
  padding-left: @grid-horizontal;   /* [1] */
}
.group-mixed--middle:last-child {
  padding-right: @grid-horizontal;  /* [1] */
}

// 1. Expand width and line-height when there are no sibling elements in .group-mixed
.group-mixed--middle:only-child {
  display: block;               /* [1] */
  line-height: @grid-vertical;  /* [1] */
}

// 1. Android hack: 10px padding caused redraw problems on the checkbox while swiping,
//    and no other CSS solution fixed the problem.
//    Something like this: http://stackoverflow.com/a/16174338/2659424
//    might be the only proper solution to the repaint problems with Android's WebKit.
.android .group-mixed--left {
  padding-right: 15px;  /* [1] */
}

// 1. Increase line-height for heading.
// 2. Center vertically. We are using .group-mixed--middle and .group-mixed--right in .group-mixed heading
//    or just .group-heading.
.group-mixed.heading > .group-mixed--middle,
.group-mixed.heading > .group-mixed--right {
  line-height: @height-heading; // [1]
  vertical-align: middle;       // [2]
}

.group-mixed.with-checkbox {
  max-height: inherit;
  height: auto;
  .group-mixed--left, .group-mixed--middle, .group-mixed--right {
    height: auto;
    line-height: inherit;
    vertical-align: top;
  }
  .group-mixed--middle {
    padding-top: 10px;
    padding-bottom: 11px;
  }

  .group-mixed--left {
    padding-top: 9.5px;
    label:before {
      line-height: inherit !important;
    }
    label {
      height: auto;
    }
  }
  .group-mixed--middle {
    span {
      height: auto;
    }
  }
}

.group-mixed.with-teaser {
  margin-bottom: 5px;
  a {
    line-height: @grid-vertical-half;
    height: auto;
  }
}


// Heading is long, multiple lines need smaller spacing, so the method above does not work
// 1. Match 88 pixels with this, to make this be the same as the above for consistent look and feel
.group-heading {
  padding-top: @grid-vertical-half + 3px; // [1]
  line-height: @grid-vertical;
  padding-bottom: @grid-vertical-half + 3px; // [1]
}
/* ... */

